--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -36,6 +36,10 @@ a {
   background-color: rgba(30, 107, 184, 1);
   border-color: rgba(255, 255, 255, 0.3); }
 
+.cta .btn {
+  text-align: center;
+}
+
 @media screen and (min-width: 64em) {
   .btn {
     padding: 0.75rem 1rem; } }
