--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -36,7 +36,7 @@ a {
   background-color: rgba(30, 107, 184, 1);
   border-color: rgba(255, 255, 255, 0.3); }
 
-.cta .btn {
+.cta {
   text-align: center;
 }
 
