--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -19,7 +19,7 @@ a {
   display: inline-block;
   margin-bottom: 1rem;
   color: rgba(255, 255, 255, 0.9);
-  background-color: rgba(255, 255, 255, 0.08);
+//background-color: rgba(255, 255, 255, 0.08);
   background-color: rgba(30, 107, 184, 0.9);
   border-color: rgba(255, 255, 255, 0.2);
   border-style: solid;
@@ -62,13 +62,13 @@ a {
 
 .page-header {
   color: #fff;
-//text-align: center;
+  text-align: center;
   background-color: #159957;
   background-image: linear-gradient(120deg, #155799, #159957); }
 
 @media screen and (min-width: 64em) {
   .page-header {
-    padding: 5rem 10rem; } }
+    padding: 5rem 14rem; } }
 
 @media screen and (min-width: 42em) and (max-width: 64em) {
   .page-header {
