--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -45,7 +45,7 @@ a {
 
 @media screen and (min-width: 64em) {
   .btn {
-    padding: 0.75rem 1rem; } }
+    padding: 0.75rem 1.5rem; } }
 
 @media screen and (min-width: 42em) and (max-width: 64em) {
   .btn {
@@ -230,6 +230,7 @@ a {
     font-size: 1rem; } }
 
 .site-footer {
+  text-align: center;
   padding-top: 2rem;
   margin-top: 2rem;
   border-top: solid 1px #eff0f1; }
