--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -19,8 +19,7 @@ a {
   display: inline-block;
   margin-bottom: 1rem;
   color: rgba(255, 255, 255, 0.9);
-//background-color: rgba(255, 255, 255, 0.08);
-  background-color: rgba(30, 107, 184, 0.9);
+  background-color: rgba(255, 255, 255, 0.08);
   border-color: rgba(255, 255, 255, 0.2);
   border-style: solid;
   border-width: 1px;
@@ -32,10 +31,14 @@ a {
 .btn:hover {
   color: rgba(255, 255, 255, 0.8);
   text-decoration: none;
-//background-color: rgba(255, 255, 255, 0.2);
-  background-color: rgba(30, 107, 184, 1);
+  background-color: rgba(255, 255, 255, 0.2);
   border-color: rgba(255, 255, 255, 0.3); }
-
+.main-content .btn {
+  background-color: rgba(30, 107, 184, 0.9);
+}
+.main-content .btn:hover {
+  background-color: rgba(30, 107, 184, 1);
+}
 .cta {
   text-align: center;
 }
