--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -53,14 +53,18 @@ a {
 @media screen and (min-width: 42em) and (max-width: 64em) {
   .btn {
     padding: 0.6rem 0.9rem;
-    font-size: 0.9rem; } }
+    //font-size: 0.9rem; 
+    
+  } }
 
 @media screen and (max-width: 42em) {
   .btn {
     display: block;
     width: 100%;
     padding: 0.75rem;
-    font-size: 0.9rem; }
+    //font-size: 0.9rem; 
+    
+  }
     .btn + .btn {
       margin-top: 1rem;
       margin-left: 0; } }
@@ -73,15 +77,15 @@ a {
 
 @media screen and (min-width: 64em) {
   .page-header {
-    padding: 5rem 14rem; } }
+    padding: 5rem 14rem 1rem; } }
 
 @media screen and (min-width: 42em) and (max-width: 64em) {
   .page-header {
-    padding: 3rem 4rem; } }
+    padding: 3rem 4rem 1rem; } }
 
 @media screen and (max-width: 42em) {
   .page-header {
-    padding: 2rem 1rem; } }
+    padding: 2rem 1rem 1rem; } }
 
 .project-name {
   margin-top: 0;
