--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -14,7 +14,10 @@ a {
   text-decoration: none; }
   a:hover {
     text-decoration: underline; }
-
+.page-header a {
+  color: #1e6bb8;
+  text-decoration: underline;
+}
 .btn {
   display: inline-block;
   margin-bottom: 1rem;
