--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -15,7 +15,7 @@ a {
   a:hover {
     text-decoration: underline; }
 .page-header a {
-  color: #1e6bb8;
+  color: #fff;
   text-decoration: underline;
 }
 .btn {
