--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -28,7 +28,9 @@ a {
   border-style: solid;
   border-width: 1px;
   border-radius: 0.3rem;
-  transition: color 0.2s, background-color 0.2s, border-color 0.2s; }
+  transition: color 0.2s, background-color 0.2s, border-color 0.2s; 
+  text-decoration: none;
+}
   .btn + .btn {
     margin-left: 1rem; }
 
