--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -18,6 +18,9 @@ a {
   color: #fff;
   text-decoration: underline;
 }
+.page-header .btn {
+  text-decoration: none;
+}
 .btn {
   display: inline-block;
   margin-bottom: 1rem;
@@ -28,8 +31,7 @@ a {
   border-style: solid;
   border-width: 1px;
   border-radius: 0.3rem;
-  transition: color 0.2s, background-color 0.2s, border-color 0.2s; 
-  text-decoration: none;
+  transition: color 0.2s, background-color 0.2s, border-color 0.2s;
 }
   .btn + .btn {
     margin-left: 1rem; }
